--- a/src/components/proyects/proyectItem/proyectItem.css
+++ b/src/components/proyects/proyectItem/proyectItem.css
@@ -1,9 +1,18 @@
 .proyectItemContainer-layout {
-  padding: 0 1.3em;
+  display: flex;
+  padding: 0 1.3rem;
+}
+
+.proyectItemContainerRight-layout {
+  justify-content: flex-end;
+}
+
+.proyectItemContainerLeft-layout {
+  justify-content: flex-start;
 }
 
 .proyectItem-width {
-  width: 50.634%;
+  width: 48.222vw;
 }
 
 .proyectItem-text {
@@ -15,11 +24,11 @@
 }
 
 .proyectItem--h3-text {
-  font-size: 1.8em;
+  font-size: 1.8rem;
 }
 
 .proyectItem--p-text {
-  font-size: 1.3em;
+  font-size: 1.3rem;
 }
 
 .proyectItem--portada-size {
@@ -27,23 +36,20 @@
   height: 6rem;
 }
 
-.proyectItemRight-position {
-  justify-self: flex-end;
-}
-
 .proyectItemLeft-border {
-  border-right: 1rem whitesmoke solid;
+  border-right: 10px whitesmoke solid;
+  border-right-style: outset;
 }
 
 .proyectItemLeft-layout {
   display: flex;
-  flex-direction: row;
   gap: 1rem;
   text-align: left;
 }
 
 .proyectItemRight-border {
-  border-left: 1rem whitesmoke solid;
+  border-left: 10px whitesmoke solid;
+  border-left-style: inset;
 }
 
 .proyectItemRight-layout {
@@ -54,6 +60,7 @@
 }
 
 @media screen and (max-width: 600px) {
+
   .proyectItem--portada-size {
     width: 90%;
   }
@@ -67,13 +74,11 @@
   }
 
   .proyectItemLeft-layout {
-    display: flex;
     flex-direction: column;
     gap: 1rem;
   }
 
   .proyectItemRight-layout {
-    display: flex;
     flex-direction: column;
     gap: 1rem;
 }
