--- a/src/components/proyectsDetails/proyectsDetails.css
+++ b/src/components/proyectsDetails/proyectsDetails.css
@@ -24,6 +24,14 @@
     margin-bottom: 2rem;
 }
 
+.proyectDetails--toolsList{
+    margin-left: 3.6rem;
+    display: flex;
+    flex-direction: column;
+    color: #25ceaf;
+    font-size: 1.3rem;
+}
+
 .proyectDetails--links-layout{
     padding: 3rem;
     text-align: center;
@@ -33,7 +41,7 @@
     margin: 0 3rem;
     font-weight: 700;
     font-size: 1.5em;
-    color: red;
+    color: rgb(239, 245, 241);
 }
 
 @media screen and (max-width: 600px) {
