--- a/src/components/skills/knowledges.css
+++ b/src/components/skills/knowledges.css
@@ -7,6 +7,7 @@
   display: grid;
   justify-items: center;
   grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
+  row-gap: 20px;
   text-align: center;
 }
 
